<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <View
        android:id="@+id/viewHead"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/desc_first_button"
        app:layout_constraintStart_toStartOf="@+id/viewHead"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/baseline_android"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="44dp"
        android:contentDescription="@string/desc_second_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_android"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/twotone"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/desc_third_button"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/twotone"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:padding="60dp"
        android:text="@string/hello"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/frase"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="124dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/pharse"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <View
        android:id="@+id/view"
        android:layout_width="128dp"
        android:layout_height="5dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        android:backgroundTint="@android:color/holo_purple"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frase" />

    <Button
        android:id="@+id/button_new_pharse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.661" />

</androidx.constraintlayout.widget.ConstraintLayout>

